--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,8 @@
 @import "tailwindcss";
-@theme {
-    --color-avocado-100: oklch(0.99 0 0);
-    --color-avocado-200: oklch(0.98 0.04 113.22);
-    --color-avocado-300: oklch(0.94 0.11 115.03);
-    --color-avocado-400: oklch(0.92 0.19 114.08);
-    --color-avocado-500: oklch(0.84 0.18 117.33);
-    --color-avocado-600: oklch(0.53 0.12 118.34);
-}
+
+/*
+@theme {}
+*/
 
 
 /* Inter Font */
@@ -16,7 +12,7 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Thin.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Thin.woff2') format('woff2');
 }
 
 @font-face {
@@ -24,7 +20,7 @@
     font-style: normal;
     font-weight: 200;
     font-display: swap;
-    src: url('/fonts/inter/Inter-ExtraLight.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
@@ -32,7 +28,7 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Light.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Light.woff2') format('woff2');
 }
 
 @font-face {
@@ -40,7 +36,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Regular.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Regular.woff2') format('woff2');
 }
 
 @font-face {
@@ -48,7 +44,7 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Medium.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Medium.woff2') format('woff2');
 }
 
 @font-face {
@@ -56,7 +52,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url('/fonts/inter/Inter-SemiBold.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -64,7 +60,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Bold.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Bold.woff2') format('woff2');
 }
 
 @font-face {
@@ -72,7 +68,7 @@
     font-style: normal;
     font-weight: 800;
     font-display: swap;
-    src: url('/fonts/inter/Inter-ExtraBold.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-ExtraBold.woff2') format('woff2');
 }
 
 @font-face {
@@ -80,7 +76,7 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url('/fonts/inter/Inter-Black.woff2') format('woff2');
+    src: url('../fonts/inter/Inter-Black.woff2') format('woff2');
 }
 
 body {
