--- a/themes/dashboarddeluxe/layouts/partials/header.html
+++ b/themes/dashboarddeluxe/layouts/partials/header.html
@@ -1,10 +1,10 @@
-{{/* Access dashboard data from site.Data.dashboard */}} {{/* Check if current page is the home page */}} {{ if .IsHome }}{{/* Only execute this block on the home page */}}
+{{/* Access dashboard data from site.Data.dashboard */}}
 <header class="fixed inset-x-0 top-0 bg-black shadow py-2 z-50 h-16 flex items-center" role="banner">
     <div class="w-full px-4 flex items-center justify-center">
         <div class="max-w-[120rem] w-full mx-auto flex items-center justify-between">
             {{/* Site title with link to home */}}
-            <a href="/" title="{{ site.Data.dashboard.header.title }} home" class="inline-flex items-center hover:underline px-0">
-                <h1 class="text-xl xl:text-2xl font-bold text-white my-0">{{ site.Data.dashboard.header.title }}</h1>
+            <a href="/" title="{{ .Site.Title }} home" class="inline-flex items-center hover:underline px-0">
+                <h1 class="text-xl xl:text-2xl font-bold text-white my-0">{{ .Site.Title }}</h1>
             </a>
 
             {{/* Desktop navigation menu */}}
@@ -36,4 +36,3 @@
 
 {{ $navigationJS := resources.Get "js/navigation.js" | resources.Fingerprint }}
 <script src="{{ $navigationJS.RelPermalink }}" integrity="{{ $navigationJS.Data.Integrity }}" crossorigin="anonymous"></script>
-{{/* End of dashboard data context */}} {{ end }} {{/* End of home page conditional block */}}
